--- a/projects/angular-notifier/src/lib/components/notifier-container.component.html
+++ b/projects/angular-notifier/src/lib/components/notifier-container.component.html
@@ -1,9 +1,6 @@
 <ul>
-	<li class="notifier__container-list" *ngFor="let notification of notifications; trackBy: identifyNotification;">
-		<notifier-notification
-			[notification]="notification"
-			(ready)="onNotificationReady( $event )"
-			(dismiss)="onNotificationDismiss( $event )">
-		</notifier-notification>
-	</li>
+  <li class="notifier__container-list" *ngFor="let notification of notifications; trackBy: identifyNotification">
+    <notifier-notification [notification]="notification" (ready)="onNotificationReady($event)" (dismiss)="onNotificationDismiss($event)">
+    </notifier-notification>
+  </li>
 </ul>
