--- a/projects/angular-notifier-demo/src/styles.scss
+++ b/projects/angular-notifier-demo/src/styles.scss
@@ -3,75 +3,75 @@
 /* BASIC */
 
 html {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 body {
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	box-sizing: border-box;
-	font-family: "Roboto", "Tahoma", "Trebuchet MS", "Arial", "Helvetica", sans-serif;
-	font-size: 14px;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', 'Tahoma', 'Trebuchet MS', 'Arial', 'Helvetica', sans-serif;
+  font-size: 14px;
 }
 
 * {
-	box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 /* APP */
 
 .app {
-	display: block;
-	padding: 30px;
+  display: block;
+  padding: 30px;
 }
 
 /* HEADINGS */
 
 h1 {
-	font-size: 30px;
-	padding-bottom: 10px;
+  font-size: 30px;
+  padding-bottom: 10px;
 }
 
 h2 {
-	margin-top: 40px;
-	font-size: 18px;
+  margin-top: 40px;
+  font-size: 18px;
 }
 
 /* BUTTONS */
 
 .button {
-	display: inline-block;
-	padding: 11px 16px 10px;
-	margin-right: 4px;
-	background: none;
-	border: none;
-	border-radius: 2px;
-	cursor: pointer;
-	opacity: 1;
-	-webkit-transition: background-color .2s ease;
-	transition: background-color .2s ease;
+  display: inline-block;
+  padding: 11px 16px 10px;
+  margin-right: 4px;
+  background: none;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  opacity: 1;
+  -webkit-transition: background-color 0.2s ease;
+  transition: background-color 0.2s ease;
 }
 
 .button--primary {
-	background-color: #2B90D9;
-	color: #FFF;
+  background-color: #2b90d9;
+  color: #fff;
 }
 
 .button--primary:hover,
 .button--primary:focus,
 .button--primary:active {
-	background-color: #2273AD;
+  background-color: #2273ad;
 }
 
 .button--secondary {
-	background-color: #DDD;
-	color: #333;
+  background-color: #ddd;
+  color: #333;
 }
 
 .button--secondary:hover,
 .button--secondary:focus,
 .button--secondary:active {
-	background-color: #CACACA;
+  background-color: #cacaca;
 }
