--- a/projects/angular-notifier/src/styles.scss
+++ b/projects/angular-notifier/src/styles.scss
@@ -8,14 +8,14 @@
 // We do *NOT* use the partial syntax, and also explicitely write out the file type, so compiling works properly.
 
 // Core
-@import "./styles/core.scss";
+@import './styles/core.scss';
 
 // Themes
-@import "./styles/themes/theme-material.scss";
+@import './styles/themes/theme-material.scss';
 
 // Types
-@import "./styles/types/type-default.scss";
-@import "./styles/types/type-error.scss";
-@import "./styles/types/type-info.scss";
-@import "./styles/types/type-success.scss";
-@import "./styles/types/type-warning.scss";
+@import './styles/types/type-default.scss';
+@import './styles/types/type-error.scss';
+@import './styles/types/type-info.scss';
+@import './styles/types/type-success.scss';
+@import './styles/types/type-warning.scss';
