style(notification-container): Remove unnecessary white space (#204)
- Fix class set on wrong element causing unnecessary white space

Closes #113.

--- a/projects/angular-notifier/src/lib/components/notifier-container.component.html
+++ b/projects/angular-notifier/src/lib/components/notifier-container.component.html
@@ -1,5 +1,5 @@
-<ul>
-  <li class="notifier__container-list" *ngFor="let notification of notifications; trackBy: identifyNotification">
+<ul class="notifier__container-list">
+  <li class="notifier__container-list-item" *ngFor="let notification of notifications; trackBy: identifyNotification">
     <notifier-notification [notification]="notification" (ready)="onNotificationReady($event)" (dismiss)="onNotificationDismiss($event)">
     </notifier-notification>
   </li>
